RESOLVED FIXED285870
[WebAuthn] log uv to assert what was sent from AS
https://bugs.webkit.org/show_bug.cgi?id=285870
Summary [WebAuthn] log uv to assert what was sent from AS
Nitin Mahendru
Reported 2025-01-13 13:01:51 PST
We have had some issues coalescing input from AS and where uv from the WebAPI was different from what WebKit gets. Adding logging to diagnose that
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-13 13:02:06 PST
Nitin Mahendru
Comment 2 2025-01-13 13:05:02 PST
EWS
Comment 3 2025-01-13 14:21:10 PST
Committed 288820@main (dd1fb4464c4f): <https://commits.webkit.org/288820@main> Reviewed commits have been landed. Closing PR #38950 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.