[WebAuthn] log uv to assert what was sent from AS https://bugs.webkit.org/show_bug.cgi?id=285870 rdar://142834064

Reviewed by Pascoe.

We have had some issues coalescing input from AS and where uv from the WebAPI was different from what WebKit gets.
Adding logging to diagnose that.

* Source/WebKit/UIProcess/WebAuthentication/fido/CtapAuthenticator.cpp:
(WebKit::CtapAuthenticator::getAssertion):

Canonical link: https://commits.webkit.org/288820@main